--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.6.4</version>
+        </dependency>
+
     </dependencies>
 
 
