Start new branch to develop sql database connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   db:
     build:
       context: ./db  # Points to the db folder, where the Dockerfile is located
-    volumes:
-      - ./db/world.sql:/docker-entrypoint-initdb.d/world.sql  # Map the SQL file for initialization
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - "33060:3306"
