--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,24 +2,36 @@ name: A workflow for my Hello World App
 on: push
 
 jobs:
-  build:
-    name: Hello world action
+  UnitTests:
+    name: Unit Tests
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Compile with Maven
-        run: mvn compile
-      - name: package with Maven
-        run: mvn package
-      - name: Build Docker Image
-        run: docker build -t semimage .
-      - name: Run image
-        run: docker run --name semcontainer -d semimage
-      - name: view logs
-        run: docker logs semcontainer
+      - name: Unit Tests
+        run: mvn -Dtest=com.napier.devops.AppTest test
+
+  build:
+    name: Build and Start Using docker-compose
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Package and Run docker compose
+        run: |
+          mvn package -DskipTests
+          docker compose up --abort-on-container-exit
