--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,5 @@
 name: A workflow for my Hello World App
-on:
-  push:
-    branches:
-      - master
-      - develop
+on: push
 
 jobs:
   UnitTests:
