app integration test file made and main.yml file updated.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
-          mvn -Dtest=MyTest test
+          mvn -Dtest=AppIntegrationTest test
           docker stop employees
           docker rm employees
           docker image rm database 
